@@ -3,12 +3,20 @@ Package: future.BatchJobs
 
 Version: 0.14.1-9000 [2017-07-19]
 
+NEW FEATURES:
+
+ o The error message for expired BatchJobs futures now include the last few
+   lines of the logged output, which sometimes includes clues on why the future
+   expired.  For instance, if a TORQUE / PBS job use more than the allocated
+   amount of memory it might be terminated by the scheduler leaving the message
+   "PBS: job killed: vmem 1234000 exceeded limit 1048576" in the output.
+
 BUG FIXES:
 
-o Calling future_lapply() with functions containing globals part of non-default
-  packages would when using batchtools futures give an error complaining that
-  the global is missing. This was due to updates in future (>= 1.4.0) that
-  broke this package.
+ o Calling future_lapply() with functions containing globals part of non-default
+   packages would when using batchtools futures give an error complaining that
+   the global is missing. This was due to updates in future (>= 1.4.0) that
+   broke this package.
 
  o loggedOutput() for BatchtoolsFuture would always return NULL unless an error
    had occured.
